--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment-1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTlYkpH2ybAsQ/aryWDaGV"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPWQuTfF5mO8BFnLsK7m6M5"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,7 +23,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 162
         },
-        "outputId": "4631de41-210c-4320-cf30-7494601b968c"
+        "outputId": "39471229-20e2-480c-d485-7924e0015fd3"
       },
       "source": [
         "from scipy.optimize import linprog\n",
@@ -33,7 +34,7 @@
         "opt = linprog(c = obj, A_ub = left, b_ub = right, bounds = bound)\n",
         "print(opt)"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -46,43 +47,6 @@
             "  status: 0\n",
             " success: True\n",
             "       x: array([97.89473581,  7.36842126])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3KY23B1i9Vep",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zcCVIZql9WtQ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "outputId": "1e535a1c-2347-4372-b801-f7f0bac3ab8f"
-      },
-      "source": [
-        "print(f'For getting Maximum Profit\\nArea for growing Wheat: {opt.x[0]} in hectares\\nArea for growing Barley: {opt.x[1]} in hectares')"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "For getting Maximum Profit\n",
-            "Area for growing Wheat: 97.89473581371212 in hectares\n",
-            "Area for growing Barley: 7.368421262572312 in hectares\n"
           ],
           "name": "stdout"
         }
